# mia

./: .env.example  .gitattributes  .gitignore  GONKA_AI_INTEGRATION.md  README.md  cost_optimization_plan.md  personal_assistant_dev_plan_v2.md  pyproject.toml
src/mia/: __init__.py  config.py  logging_setup.py  main.py
src/mia/agent/: __init__.py  core.py  prompts.py  router.py
src/mia/bot/: __init__.py  feedback.py  handlers.py  keyboards.py
src/mia/jobs/: __init__.py  maintenance.py
src/mia/memory/: __init__.py  context.py  db.py  schema.sql
src/mia/onboarding/: __init__.py  interview.py
src/mia/tools/: __init__.py  memory.py  registry.py
src/mia/voice/: __init__.py  transcribe.py
tests/: gates.md  test_agent.py  test_config.py  test_db.py  test_memory.py  test_sessions.py  test_voice.py
